syntax = "proto3";
package contract;
option go_package = ".;contract";

service GroupBirthday {
    rpc GetGroups (GetGroupsRequest) returns (GetGroupsReply) {}
    rpc GetMemberId (GetMemberIdRequest) returns (GetMemberIdReply) {}
    rpc GetMemberBirthdays (GetMemberBirthdaysRequest) returns (GetMemberBirthdaysReply) {}
    rpc SaveMember (SaveMemberRequest) returns (SaveMemberReply) {}
}

message GetGroupsRequest {
    int32 memberId = 1;
}

message GetGroupsReply {
    repeated string groups = 1;
}

message GetMemberIdRequest {
    string firstName = 1;
    string lastName = 2;
    string telegramUsername = 3;
}

message GetMemberIdReply {
    int32 memberId = 1;
}

message GetMemberBirthdaysRequest {
    string groupName = 1;
}

message GetMemberBirthdaysReply {
    repeated MemberBirthday memberBirthdays = 1;
}

message MemberBirthday {
    string firstName = 1;
    string lastName = 2;
    int32 day = 3;
    int32 month = 4;
}

message SaveMemberRequest {
    string firstName = 1;
    string lastName = 2;
    string telegramUsername = 3;
    int32 telegramUserId = 4;
    int64 telegramChatId = 5;
    string telegramChatName = 6;
}

message SaveMemberReply {
    int32 memberId = 1;
}

